added book submit form

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    box-sizing: border-box;
 }
 body{
     background-color: teal;
@@ -42,10 +43,10 @@ main {
     border: 2px solid black;
     border-radius: 10px;
     z-index: 10;
-    background-color: lavender;
-    width: 500px;
+    background-color:  #f0eef1;
+    width: 300px;
     max-width: 80%;
-    color: teal;
+    color: black;
     display: flex;
     flex-direction: column;
 }
@@ -84,9 +85,30 @@ main {
     text-align: center;
     padding: 20px;
     font-size: larger;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
+}
+.form-content .text-input {
+    height: 50px;
+    width: 250px;
+    border-radius: 10px;
+    border-style: none;
+    font-size: 20px;
+    padding: 10px;
+}
+.form-content .pages{
+    display: flex;
+    gap: 20px;
+    padding: 10px;
 }
 
+.form-content button{
+     padding: 10px;
+     color: teal;
+     font-size: 20px;
+     background-color: lavender;
+     border-radius: 10px;
+     border-style: none;
+}
 
 
 .overlay{
